+user settings bugfix

--- a/u_config.cfg
+++ b/u_config.cfg
@@ -10,69 +10,117 @@ p4
 sS'top_ten_connections'
 p5
 (dp6
-S'Local_storage'
+VLocal_storage
 p7
 (dp8
-ssS'master_login'
+S'118'
 p9
-S'root'
+I1
+ssVFTP_storage
 p10
-sS'databases'
-p11
-(lp12
-(dp13
-S'Name'
+(dp11
+S'158'
+p12
+I1
+sssS'master_login'
+p13
+S'root'
 p14
-g7
-sS'Path'
+sS'databases'
 p15
-S'config.db'
-p16
-sS'Password'
-p17
-S''
+(lp16
+(dp17
+S'Name'
 p18
-sS'Type'
+S'Local_storage'
 p19
-S'local'
-p20
-sS'Properties'
-p21
-(dp22
 sS'User'
+p20
+S''
+p21
+sS'Path'
+p22
+S'config.db'
 p23
-g18
-sa(dp24
-g14
-VFTP_storageee
+sS'Password'
+p24
+g21
+sS'Type'
 p25
-sg15
-S'config2.db'
+S'local'
 p26
-sg17
-S'pwd'
+sS'Properties'
 p27
-sg19
-S'ftp'
-p28
-sg21
-(dp29
-S'FTPPassword'
+(dp28
+sa(dp29
+g18
+VNloca
 p30
-S'ftppwd'
+sg20
+g21
+sg22
+Vnloca.db
 p31
-sS'FTPUser'
-p32
-S'ftpuser'
-p33
-sS'Port'
+sg24
+g21
+sg25
+g26
+sg27
+(dp32
+sa(dp33
+g18
+S'FTP_storage'
 p34
+sg20
+S'user'
+p35
+sg22
+S'config2.db'
+p36
+sg24
+S'pwd'
+p37
+sg25
+S'ftp'
+p38
+sg27
+(dp39
+S'FTPPassword'
+p40
+S'ftppwd'
+p41
+sS'FTPUser'
+p42
+S'ftpuser'
+p43
+sS'Port'
+p44
 I21
 sS'Server'
-p35
+p45
 S'10.10.10.10'
-p36
-ssg23
-S'user'
-p37
-sas.
+p46
+ssa(dp47
+g18
+VNFTP
+p48
+sg20
+g21
+sg22
+Vnftp.db
+p49
+sg24
+g21
+sg25
+g38
+sg27
+(dp50
+g40
+g21
+sg42
+g21
+sg44
+g21
+sg45
+g21
+ssas.
