--- a/u_config.cfg
+++ b/u_config.cfg
@@ -10,117 +10,34 @@ p4
 sS'top_ten_connections'
 p5
 (dp6
-VLocal_storage
+sS'master_login'
 p7
-(dp8
-S'118'
-p9
-I1
-ssVFTP_storage
-p10
-(dp11
-S'158'
-p12
-I1
-sssS'master_login'
-p13
 S'root'
-p14
+p8
 sS'databases'
-p15
-(lp16
-(dp17
+p9
+(lp10
+(dp11
 S'Name'
-p18
+p12
 S'Local_storage'
-p19
-sS'User'
-p20
-S''
-p21
+p13
 sS'Path'
-p22
+p14
 S'config.db'
-p23
+p15
 sS'Password'
-p24
-g21
+p16
+S''
+p17
 sS'Type'
-p25
+p18
 S'local'
-p26
+p19
 sS'Properties'
-p27
-(dp28
-sa(dp29
-g18
-VNloca
-p30
-sg20
-g21
-sg22
-Vnloca.db
-p31
-sg24
-g21
-sg25
-g26
-sg27
-(dp32
-sa(dp33
-g18
-S'FTP_storage'
-p34
-sg20
-S'user'
-p35
-sg22
-S'config2.db'
-p36
-sg24
-S'pwd'
-p37
-sg25
-S'ftp'
-p38
-sg27
-(dp39
-S'FTPPassword'
-p40
-S'ftppwd'
-p41
-sS'FTPUser'
-p42
-S'ftpuser'
-p43
-sS'Port'
-p44
-I21
-sS'Server'
-p45
-S'10.10.10.10'
-p46
-ssa(dp47
-g18
-VNFTP
-p48
-sg20
-g21
-sg22
-Vnftp.db
-p49
-sg24
-g21
-sg25
-g38
-sg27
-(dp50
-g40
-g21
-sg42
-g21
-sg44
-g21
-sg45
-g21
-ssas.
+p20
+(dp21
+sS'User'
+p22
+g17
+sas.
